...
                                    </tableViewCell>
                                </prototypes>
                            </tableView>
                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="WIx-1z-COF">
                                <rect key="frame" x="0.0" y="729" width="375" height="49"/>
                                <items>
                                    <barButtonItem title="Item" image="spotlight" landscapeImage="spotlight" id="pod-8X-4Da">
                                        <color key="tintColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <connections>
                                            <action selector="spotlightTap:" destination="9j7-Dh-kd4" id="7N3-P9-GrZ"/>
                                        </connections>
                                    </barButtonItem>
                                </items>
...
            <objects>
                <viewController storyboardIdentifier="ListSpotlightViewController" id="BYZ-38-t0r" customClass="ListSpotlightViewController" customModule="TakeItEasy" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" barStyle="black" placeholder="Trova la tua stazione" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hSv-Fr-BGV">
                                <rect key="frame" x="0.0" y="44" width="375" height="56"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <color key="barTintColor" red="0.050980392156862744" green="0.050980392156862744" blue="0.050980392156862744" alpha="0.35183005136986301" colorSpace="calibratedRGB"/>
                                <textInputTraits key="textInputTraits" keyboardType="alphabet" returnKeyType="done"/>
                            </searchBar>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="H0P-vS-Bsi">
...
